# reference-implementation-aws

templates/backstage/: catalog-info.yaml
templates/backstage/ai-agents/: template.yaml
templates/backstage/ai-agents/deploy/: provisioner.yaml
templates/backstage/ai-agents/deploy/cd/: values.yaml
templates/backstage/ai-agents/deploy/cd/templates/: argoevents.yaml
templates/backstage/ai-agents/lang-graph/: agent.py  catalog-info.yaml  pyproject.toml
templates/backstage/ai-agents/lang-graph/ci/templates/: argoevents.yaml
templates/backstage/ai-agents/langgraph/: Dockerfile  README.md  catalog-info.yaml  langgraph.json  pyproject.toml  supervisor_agent.py
templates/backstage/ai-agents/langgraph/ci/templates/: argoevents.yaml
templates/backstage/ai-agents/provisioner/: workflow.yaml
templates/backstage/ai-agents/strands/: Dockerfile  agent.py  buildspec.yaml  catalog-info.yaml  pyproject.toml  utils.py
templates/backstage/ai-agents/strands/ci/: values.yaml
templates/backstage/ai-agents/strands/ci/templates/: argoevents.yaml  external_secrets.yaml  role_binding.yaml  serviceaccount.yaml
