[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.0",
    "strands-agents>=1.10.0",
    "uvicorn[standard]>=0.37.0",
    "strands-agents-tools",
    "langfuse",
    "strands-agents[otel]",
    "bedrock-agentcore"
]